List width fixed for large screens. Scrollbar removed

--- a/ng/src/app/app.component.css
+++ b/ng/src/app/app.component.css
@@ -9,3 +9,14 @@
   display:flex;
   justify-content: center;
 }
+
+#content {
+  width: 90vw;
+  margin: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  #content {
+    width: 700px;
+  }
+}
